--- a/edit-profile.html
+++ b/edit-profile.html
@@ -243,7 +243,7 @@
                       </div>
                     </fieldset>
                     <div class="text-center">
-                      <button class="submit_btn" type="submit">Submit Now</button>
+                      <button class="submit_btn" type="submit">Change Profile</button>
                     </div>
                   </form>
                 </div>
