new pages addes

--- a/notification.html
+++ b/notification.html
@@ -75,7 +75,7 @@
                   <h5>Dashboard</h5>
                 </a>
               </li>
-              <li class="active">
+              <li>
                 <a href="profile.html">
                   <i class="far fa-user-circle"></i>
                   <h5>Profile</h5>
@@ -88,13 +88,14 @@
                   <span class="float-end">10</span>
                 </a>
               </li>
+
               <li>
                 <a href="change-password.html">
                   <i class="fas fa-unlock"></i>
                   <h5>Change Password</h5>
                 </a>
               </li>
-              <li>
+              <li class="active">
                 <a href="notification.html">
                   <i class="fas fa-bell"></i>
                   <h5>Notification</h5>
@@ -115,41 +116,29 @@
             <div class="dashboard_info">
               <div class="common_block">
                 <div class="d-flex justify-content-between align-items-start">
-                  <h4 class="common__title">Profile Details</h4>
-                  <a href="edit-profile.html" class="common__btn__">Edit Profile</a>
+                  <h4 class="common__title">Notifications</h4>
                 </div>
-                <table class="table table-bordered table-striped mb-0">
-                  <tbody>
-                    <tr>
-                      <th>Given Name</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Family Name</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Affiliation Name</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Country</th>
-                      <td>Banglades</td>
-                    </tr>
-                    <tr>
-                      <th>Mobile Number</th>
-                      <td>01740008005</td>
-                    </tr>
-                    <tr>
-                      <th>Address</th>
-                      <td>Phulpur, Mymensingh</td>
-                    </tr>
-                    <tr>
-                      <th>Gender</th>
-                      <td>Male</td>
-                    </tr>
-                  </tbody>
-                </table>
+                <fieldset>
+                  <ul class="notification__list list-unstyled">
+                    <li>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      <small class="d-block">10, Feb ,2023</small>
+                    </li>
+                    <li>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse pariatur incidunt eaque mollitia
+                      nulla.
+                      <small class="d-block">10, Feb ,2023</small>
+                    </li>
+                    <li>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing.
+                      <small class="d-block">10, Feb ,2023</small>
+                    </li>
+                    <li>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium!
+                      <small class="d-block">10, Feb ,2023</small>
+                    </li>
+                  </ul>
+                </fieldset>
               </div>
             </div>
           </div>
