--- a/change-password.html
+++ b/change-password.html
@@ -75,7 +75,7 @@
                   <h5>Dashboard</h5>
                 </a>
               </li>
-              <li class="active">
+              <li>
                 <a href="profile.html">
                   <i class="far fa-user-circle"></i>
                   <h5>Profile</h5>
@@ -88,7 +88,8 @@
                   <span class="float-end">10</span>
                 </a>
               </li>
-              <li>
+
+              <li class="active">
                 <a href="change-password.html">
                   <i class="fas fa-unlock"></i>
                   <h5>Change Password</h5>
@@ -116,40 +117,40 @@
               <div class="common_block">
                 <div class="d-flex justify-content-between align-items-start">
                   <h4 class="common__title">Profile Details</h4>
-                  <a href="edit-profile.html" class="common__btn__">Edit Profile</a>
                 </div>
-                <table class="table table-bordered table-striped mb-0">
-                  <tbody>
-                    <tr>
-                      <th>Given Name</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Family Name</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Affiliation Name</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Country</th>
-                      <td>Banglades</td>
-                    </tr>
-                    <tr>
-                      <th>Mobile Number</th>
-                      <td>01740008005</td>
-                    </tr>
-                    <tr>
-                      <th>Address</th>
-                      <td>Phulpur, Mymensingh</td>
-                    </tr>
-                    <tr>
-                      <th>Gender</th>
-                      <td>Male</td>
-                    </tr>
-                  </tbody>
-                </table>
+                <form action="">
+                  <div class="row">
+                    <div class="col-lg-4 mb-4">
+                      <div class="input__groups">
+                        <label>Enter Your Password</label>
+                        <div class="input__box position-relative">
+                          <input class="password__field" type="password" placeholder="Enter your password">
+                          <i class="fas fa-eye"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4 mb-4">
+                      <div class="input__groups">
+                        <label>Enter New Password</label>
+                        <div class="input__box position-relative">
+                          <input class="password__field" type="password" placeholder="Enter new password">
+                          <i class="fas fa-eye"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 mb-4">
+                      <div class="input__groups">
+                        <label>Enter Confirm Password</label>
+                        <div class="input__box position-relative">
+                          <input class="password__field" type="password" placeholder="Enter confirm password">
+                          <i class="fas fa-eye"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
