--- a/paper-submission-form.html
+++ b/paper-submission-form.html
@@ -75,13 +75,13 @@
                   <h5>Dashboard</h5>
                 </a>
               </li>
-              <li class="active">
+              <li>
                 <a href="profile.html">
                   <i class="far fa-user-circle"></i>
                   <h5>Profile</h5>
                 </a>
               </li>
-              <li>
+              <li class="active">
                 <a href="submission.html">
                   <i class="far fa-folder-open"></i>
                   <h5>Submission</h5>
@@ -115,41 +115,75 @@
             <div class="dashboard_info">
               <div class="common_block">
                 <div class="d-flex justify-content-between align-items-start">
-                  <h4 class="common__title">Profile Details</h4>
-                  <a href="edit-profile.html" class="common__btn__">Edit Profile</a>
+                  <h4 class="common__title">Make a Submission</h4>
                 </div>
-                <table class="table table-bordered table-striped mb-0">
-                  <tbody>
-                    <tr>
-                      <th>Given Name</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Family Name</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Affiliation Name</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Country</th>
-                      <td>Banglades</td>
-                    </tr>
-                    <tr>
-                      <th>Mobile Number</th>
-                      <td>01740008005</td>
-                    </tr>
-                    <tr>
-                      <th>Address</th>
-                      <td>Phulpur, Mymensingh</td>
-                    </tr>
-                    <tr>
-                      <th>Gender</th>
-                      <td>Male</td>
-                    </tr>
-                  </tbody>
-                </table>
+                <form action="#">
+                  <div class="row">
+                    <div class="col-lg-12 mb-4">
+                      <div class="input__groups">
+                        <label>Submission Title</label>
+                        <input type="text" placeholder="Title">
+                      </div>
+                    </div>
+
+                    <div class="col-lg-12 mb-2">
+                      <div class="document__submission__pdf">
+                        <label>With Author <sup class="text-danger">*</sup></label>
+                        <div class="document__submission__widget text-center">
+                          <input class="d-none" type="file" id="file">
+                          <h6><label for="file">Click Here</label> to Upload documents</h6>
+                          <p>Document file size does not exceed 20 MB and you can upload any document file format for
+                            users to download</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-12 mb-4">
+                      <div class="uploaded__pdf__file d-flex justify-content-between">
+                        <div class="info d-flex">
+                          <div class="icon"><img src="images/file.svg" alt=""></div>
+                          <div class="text ms-4">
+                            <h5>Medixo - Medical Hospital Admin Template (1).pdf</h5>
+                            <small>33 KB</small>
+                          </div>
+                        </div>
+                        <div class="delete text-end"><i class="fas fa-trash-alt"></i></div>
+                      </div>
+                    </div>
+                    <div class="col-lg-12 mb-2">
+                      <div class="document__submission__pdf">
+                        <label>Without Author <sup class="text-danger">*</sup></label>
+                        <div class="document__submission__widget text-center">
+                          <input class="d-none" type="file" id="file">
+                          <h6><label for="file">Click Here</label> to Upload documents</h6>
+                          <p>Document file size does not exceed 20 MB and you can upload any document file format for
+                            users to download</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-12 mb-4">
+                      <div class="uploaded__pdf__file d-flex justify-content-between">
+                        <div class="info d-flex">
+                          <div class="icon"><img src="images/file.svg" alt=""></div>
+                          <div class="text ms-4">
+                            <h5>Medixo - Medical Hospital Admin Template (1).pdf</h5>
+                            <small>33 KB</small>
+                          </div>
+                        </div>
+                        <div class="delete text-end"><i class="fas fa-trash-alt"></i></div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-12 mb-4">
+                      <div class="input__groups">
+                        <label>Abstract <sup class="text-danger">*</sup></label>
+                        <textarea rows="4"></textarea>
+                      </div>
+                    </div>
+                    <div class="col-lg-12">
+                      <button class="submit__submission">Submit Paper</button>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
