--- a/submission.html
+++ b/submission.html
@@ -75,13 +75,13 @@
                   <h5>Dashboard</h5>
                 </a>
               </li>
-              <li class="active">
+              <li>
                 <a href="profile.html">
                   <i class="far fa-user-circle"></i>
                   <h5>Profile</h5>
                 </a>
               </li>
-              <li>
+              <li class="active">
                 <a href="submission.html">
                   <i class="far fa-folder-open"></i>
                   <h5>Submission</h5>
@@ -115,38 +115,40 @@
             <div class="dashboard_info">
               <div class="common_block">
                 <div class="d-flex justify-content-between align-items-start">
-                  <h4 class="common__title">Profile Details</h4>
-                  <a href="edit-profile.html" class="common__btn__">Edit Profile</a>
+                  <h4 class="common__title">Submission List</h4>
+                  <a href="paper-submission-form.html" class="common__btn__">New Paper Submission</a>
                 </div>
                 <table class="table table-bordered table-striped mb-0">
+                  <thead class="table-dark">
+                    <tr>
+                      <th>Sl</th>
+                      <th>Title</th>
+                      <th>Documents</th>
+                      <th>Current Status</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
                   <tbody>
                     <tr>
-                      <th>Given Name</th>
-                      <td>Nahid Raj</td>
+                      <td>01</td>
+                      <td>Now you can have the philosophy</td>
+                      <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
+                      <td><span class="badge bg-success">Approved</span></td>
+                      <td><a href="submission-view.html" class="view__submission"><i class="fas fa-eye"></i></a></td>
                     </tr>
                     <tr>
-                      <th>Family Name</th>
-                      <td>Nahid Raj</td>
+                      <td>01</td>
+                      <td>Now you can have the philosophy</td>
+                      <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
+                      <td><span class="badge bg-danger">Rejected</span></td>
+                      <td><a href="submission-view.html" class="view__submission"><i class="fas fa-eye"></i></a></td>
                     </tr>
                     <tr>
-                      <th>Affiliation Name</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Country</th>
-                      <td>Banglades</td>
-                    </tr>
-                    <tr>
-                      <th>Mobile Number</th>
-                      <td>01740008005</td>
-                    </tr>
-                    <tr>
-                      <th>Address</th>
-                      <td>Phulpur, Mymensingh</td>
-                    </tr>
-                    <tr>
-                      <th>Gender</th>
-                      <td>Male</td>
+                      <td>01</td>
+                      <td>Now you can have the philosophy</td>
+                      <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
+                      <td><span class="badge bg-info">Pending</span></td>
+                      <td><a href="submission-view.html" class="view__submission"><i class="fas fa-eye"></i></a></td>
                     </tr>
                   </tbody>
                 </table>
