--- a/profile.html
+++ b/profile.html
@@ -122,30 +122,37 @@
                   <tbody>
                     <tr>
                       <th>Given Name</th>
+                      <th class="text-center">:</th>
                       <td>Nahid Raj</td>
                     </tr>
                     <tr>
                       <th>Family Name</th>
+                      <th class="text-center">:</th>
                       <td>Nahid Raj</td>
                     </tr>
                     <tr>
                       <th>Affiliation Name</th>
+                      <th class="text-center">:</th>
                       <td>Nahid Raj</td>
                     </tr>
                     <tr>
                       <th>Country</th>
+                      <th class="text-center">:</th>
                       <td>Banglades</td>
                     </tr>
                     <tr>
                       <th>Mobile Number</th>
+                      <th class="text-center">:</th>
                       <td>01740008005</td>
                     </tr>
                     <tr>
                       <th>Address</th>
+                      <th class="text-center">:</th>
                       <td>Phulpur, Mymensingh</td>
                     </tr>
                     <tr>
                       <th>Gender</th>
+                      <th class="text-center">:</th>
                       <td>Male</td>
                     </tr>
                   </tbody>
