updated some design

--- a/submission-view.html
+++ b/submission-view.html
@@ -163,23 +163,10 @@
                       <h5 class="sub__header">Editorial Board</h5>
                       <div class="board__comments">
                         <div class="row">
-                          <div class="col-lg-12 mb-4">
-                            <div class="form-check">
-                              <input class="form-check-input shadow-none" type="checkbox" value="" id="flexCheckChecked"
-                                checked>
-                              <label class="form-check-label" for="flexCheckChecked">
-                                Accept
-                              </label>
-                            </div>
-                          </div>
-                          <div class="col-lg-12 mb-4">
-                            <div class="input__groups">
-                              <textarea rows="2" placeholder="Enter your comments"></textarea>
-                            </div>
-                          </div>
-                          <div class="col-lg-12 mb-4">
-                            <a href="" class="appreved__btn">Approve</a>
-                            <a href="" class="reject__btn">Reject</a>
+                          <div class="col-lg-12">
+                            <span class="badge bg-success fs-6">Accepted</span>
+                            <p class="my-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil culpa, sed neque ratione laboriosam non facere nulla ullam! Magni maiores dolorum quam cupiditate placeat, ratione eveniet libero quibusdam ipsam veniam.</p>
+                            <h5>Your Submission is Approved</h5>
                           </div>
                         </div>
                       </div>
@@ -197,7 +184,7 @@
                                   <p>Lorem ipsum dolor sit amet
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Jhon doe</span>
+                                  <span>-- Jhon doe --</span>
                                 </div>
                               </div>
                             </div>
@@ -209,7 +196,7 @@
                                   <p>Adipisicing elit, sed do eiusmod.
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Younger brother of sir (MD. Arif)</span>
+                                  <span>-- Younger brother of sir (MD. Arif) --</span>
                                 </div><img class="img-fluid" src="images/2.jpg" alt="image">
                               </div>
                             </div>
@@ -221,7 +208,7 @@
                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Baccha cele (Jarfaraz Karim)</span>
+                                  <span>-- Baccha cele (Jarfaraz Karim) --</span>
                                 </div><img class="img-fluid" src="images/2.jpg" alt="image">
                               </div>
                             </div>
@@ -233,7 +220,7 @@
                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Nobobibahito (Kawsar bro)</span>
+                                  <span>-- Nobobibahito (Kawsar bro) --</span>
                                 </div>
                               </div>
                             </div>
@@ -245,7 +232,7 @@
                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Jhon doe</span>
+                                  <span>-- Jhon doe --</span>
                                 </div><img class="img-fluid" src="images/2.jpg" alt="image">
                               </div>
                             </div>
@@ -257,7 +244,7 @@
                                   <p>Lorem ipsum dolor sit amet
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Jhon doe</span>
+                                  <span>-- Jhon doe --</span>
                                 </div>
                               </div>
                             </div>
@@ -269,7 +256,7 @@
                                   <p>Adipisicing elit, sed do eiusmod.
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Jhon doe</span>
+                                  <span>-- Jhon doe --</span>
                                 </div><img class="img-fluid" src="images/2.jpg" alt="image">
                               </div>
                             </div>
@@ -281,7 +268,7 @@
                                   <p>Lorem ipsum dolor sit amet
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Jhon doe</span>
+                                  <span>-- Jhon doe --</span>
                                 </div>
                               </div>
                             </div>
@@ -293,7 +280,7 @@
                                   <p>Adipisicing elit, sed do eiusmod.
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Jhon doe</span>
+                                  <span>-- Jhon doe --</span>
                                 </div><img class="img-fluid" src="images/2.jpg" alt="image">
                               </div>
                             </div>
@@ -305,7 +292,7 @@
                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Jhon doe</span>
+                                  <span>-- Jhon doe --</span>
                                 </div><img class="img-fluid" src="images/2.jpg" alt="image">
                               </div>
                             </div>
@@ -317,7 +304,7 @@
                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Jhon doe</span>
+                                  <span>-- Jhon doe --</span>
                                 </div>
                               </div>
                             </div>
@@ -329,7 +316,7 @@
                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Jhon doe</span>
+                                  <span>-- Jhon doe --</span>
                                 </div><img class="img-fluid" src="images/2.jpg" alt="image">
                               </div>
                             </div>
@@ -341,7 +328,7 @@
                                   <p>Lorem ipsum dolor sit amet
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Jhon doe</span>
+                                  <span>-- Jhon doe --</span>
                                 </div>
                               </div>
                             </div>
@@ -353,7 +340,7 @@
                                   <p>Adipisicing elit, sed do eiusmod.
                                     <small class="d-block text-end">4:00 pm</small>
                                   </p>
-                                  <span>Jhon doe</span>
+                                  <span>-- Jhon doe --</span>
                                 </div><img class="img-fluid" src="images/2.jpg" alt="image">
                               </div>
                             </div>
@@ -362,7 +349,7 @@
                       </div>
                       <div class="attachment__panel d-flex align-items-center">
                         <div class="uploaded__file">
-                          <img src="images/1.jpg" alt="">
+                          <img src="images/file.svg" alt="">
                           <i class="fas fa-times-circle"></i>
                         </div>
                         <div class="input_groups">
