--- a/login.html
+++ b/login.html
@@ -21,40 +21,48 @@
 
 
   <section class="login_page d-flex justify-content-center align-items-center">
-    <div class="login_box">
-      <div class="row g-0">
-        <div class="col-lg-6">
-          <div class="left_info d-flex flex-column justify-content-center text-center">
-            <h1>
-              WELCOME BACK!
-            </h1>
-            <span>
-              If you don't have any account please sign up as a new user
-            </span>
-            <a href="registration.html" class="signup_btn">
-              Sign Up
-            </a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="right_info text-center d-flex flex-column justify-content-center">
-            <div class="text-center __logo">
-              <img src="images/main_logo.png" alt="" width="240">
+    <!-- new added -->
+    <div class="container">
+      <!-- new added class-->
+      <div class="login_box mx-auto">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="left_info d-flex flex-column justify-content-center text-center">
+              <h1>
+                WELCOME BACK!
+              </h1>
+              <span>
+                If you don't have any account please sign up as a new user
+              </span>
+              <a href="registration.html" class="signup_btn">
+                Sign Up
+              </a>
             </div>
-            <h1 class="login_title">Login</h1>
-            <form action="#">
-              <div class="input_groups">
-                <input type="text" placeholder="Username">
+          </div>
+          <div class="col-lg-6">
+            <div class="right_info text-center d-flex flex-column justify-content-center">
+              <div class="text-center __logo">
+                <img src="images/main_logo.png" alt="" width="240">
               </div>
-              <div class="input_groups password position-relative">
-                <input type="password" placeholder="Password">
-                <button><i class="fas fa-eye"></i></button>
-              </div>
-              <div>
-                <a href="" class="forgot_password">Forgot your password?</a>
-              </div>
-              <a href="" class="login_btn">SIGN IN</a>
-            </form>
+              <h1 class="login_title">Login</h1>
+              <form action="#">
+                <div class="input_groups">
+                  <input type="text" placeholder="Username">
+                </div>
+                <div class="input_groups password position-relative">
+                  <input type="password" placeholder="Password">
+                  <button><i class="fas fa-eye"></i></button>
+                </div>
+                <div>
+                  <a href="" class="forgot_password">Forgot your password?</a>
+                  <!-- new added -->
+                  <a href="registration.html" class="mobile_signup d-block d-md-none">Don't have any account?</a>
+                  <!-- new added -->
+                </div>
+                <!-- new class added -->
+                <a href="" class="login_btn mt-0 mt-md-4">SIGN IN</a>
+              </form>
+            </div>
           </div>
         </div>
       </div>
