--- a/registration.html
+++ b/registration.html
@@ -24,7 +24,8 @@
   <section class="registration_page">
     <div class="registration_box">
       <div class="row">
-        <div class="col-lg-6">
+        <!-- new addes class -->
+        <div class="col-lg-6 d-none d-lg-block">
           <div class="left_side">
             <div class="logo">
               <img src="images/main_logo-w.png" alt="" width="300">
@@ -50,22 +51,23 @@
                   <h5>Profile Information</h5>
                 </div>
                 <div class="row g-3">
-                  <div class="col-lg-6">
+                  <!-- all class need to change -->
+                  <div class="col-lg-12 col-xl-6 col-md-6">
                     <div class="input-groups">
                       <input type="text" placeholder="Given Name">
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-12 col-xl-6 col-md-6">
                     <div class="input-groups">
                       <input type="text" placeholder="Family Name">
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-12 col-xl-6 col-md-6">
                     <div class="input-groups">
                       <input type="text" placeholder="Affiliation Name">
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-12 col-xl-6 col-md-6">
                     <div class="input-groups">
                       <select class="js-select2">
                         <option>Country</option>
@@ -91,17 +93,17 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-12 col-xl-6 col-md-6">
                     <div class="input-groups">
                       <input type="text" placeholder="Mobile">
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-12 col-xl-6 col-md-6">
                     <div class="input-groups">
                       <input type="text" placeholder="Address">
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-12 col-xl-6 col-md-6">
                     <div class="input-groups">
                       <select class="js-select2">
                         <option>University</option>
@@ -127,7 +129,7 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-12 col-xl-6 col-md-6">
                     <div class="profile_image_upload d-flex flex-wrap">
                       <div class="image-box position-relative">
                         <img src="images/prf.png" alt="prf">
@@ -141,7 +143,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-6 align-self-center">
+                  <div class="col-lg-12 col-xl-6 col-md-6 align-self-center">
                     <div class="d-flex">
                       <div class="form-check">
                         <input class="form-check-input shadow-none" type="radio" name="flexRadioDefault"
@@ -167,22 +169,23 @@
                   <h5>Login Information</h5>
                 </div>
                 <div class="row g-3">
-                  <div class="col-lg-6">
+                  <!-- all class need to change -->
+                  <div class="col-lg-6 col-md-6">
                     <div class="input-groups">
                       <input type="email" placeholder="Email ">
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-md-6">
                     <div class="input-groups">
                       <input type="text" placeholder="User Name">
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-md-6">
                     <div class="input-groups">
                       <input type="password" placeholder="Password">
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-md-6">
                     <div class="input-groups">
                       <input type="password" placeholder="Confirm Password">
                     </div>
