full page responsive

--- a/profile.html
+++ b/profile.html
@@ -24,14 +24,14 @@
   <header>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-6 col-lg-4 align-self-center">
           <div class="left_logo">
             <a href="">
               <img src="images/main_logo.png" alt="main_logo" width="200">
             </a>
           </div>
         </div>
-        <div class="col-lg-8 align-self-center">
+        <div class="col-6 col-lg-8 align-self-center">
           <div class="right_information d-flex justify-content-end align-items-center">
             <div class="notification">
               <i class="fas fa-bell"></i>
@@ -47,13 +47,25 @@
   </header>
   <!-- header part end -->
 
+  <!-- mobile menu start -->
+  <div class="mobile_menus d-block d-lg-none">
+    <div class="container">
+      <div class="mobile_menu">
+        <i class="fas fa-bars"></i> <span>Menu</span>
+      </div>
+    </div>
+  </div>
+  <!-- mobile menu end -->
+
+
   <!-- main part start -->
   <main>
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-xl-3">
           <div class="left_sidebar">
-            <div class="profile_widget">
+            <div class="profile_widget position-relative">
+              <div class="mobile_sidebar_close d-block d-lg-none"><i class="fas fa-times"></i></div>
               <div class="image">
                 <figure>
                   <img src="images/profile.jpg" alt="profile" class="img-fluid">
@@ -116,47 +128,51 @@
               <div class="common_block">
                 <div class="d-flex justify-content-between align-items-start">
                   <h4 class="common__title">Profile Details</h4>
-                  <a href="edit-profile.html" class="common__btn__">Edit Profile</a>
+                  <h5>
+                    <a href="edit-profile.html" class="common__btn__">Edit Profile</a>
+                  </h5>
                 </div>
-                <table class="table table-bordered table-striped mb-0">
-                  <tbody>
-                    <tr>
-                      <th>Given Name</th>
-                      <th class="text-center">:</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Family Name</th>
-                      <th class="text-center">:</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Affiliation Name</th>
-                      <th class="text-center">:</th>
-                      <td>Nahid Raj</td>
-                    </tr>
-                    <tr>
-                      <th>Country</th>
-                      <th class="text-center">:</th>
-                      <td>Banglades</td>
-                    </tr>
-                    <tr>
-                      <th>Mobile Number</th>
-                      <th class="text-center">:</th>
-                      <td>01740008005</td>
-                    </tr>
-                    <tr>
-                      <th>Address</th>
-                      <th class="text-center">:</th>
-                      <td>Phulpur, Mymensingh</td>
-                    </tr>
-                    <tr>
-                      <th>Gender</th>
-                      <th class="text-center">:</th>
-                      <td>Male</td>
-                    </tr>
-                  </tbody>
-                </table>
+                <div class="table-responsive">
+                  <table class="table table-bordered table-striped mb-0">
+                    <tbody>
+                      <tr>
+                        <th style="min-width:160px">Given Name</th>
+                        <th style="min-width:40px" class="text-center">:</th>
+                        <td style="min-width:240px">Nahid Raj</td>
+                      </tr>
+                      <tr>
+                        <th>Family Name</th>
+                        <th class="text-center">:</th>
+                        <td>Nahid Raj</td>
+                      </tr>
+                      <tr>
+                        <th>Affiliation Name</th>
+                        <th class="text-center">:</th>
+                        <td>Nahid Raj</td>
+                      </tr>
+                      <tr>
+                        <th>Country</th>
+                        <th class="text-center">:</th>
+                        <td>Banglades</td>
+                      </tr>
+                      <tr>
+                        <th>Mobile Number</th>
+                        <th class="text-center">:</th>
+                        <td>01740008005</td>
+                      </tr>
+                      <tr>
+                        <th>Address</th>
+                        <th class="text-center">:</th>
+                        <td>Phulpur, Mymensingh</td>
+                      </tr>
+                      <tr>
+                        <th>Gender</th>
+                        <th class="text-center">:</th>
+                        <td>Male</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
@@ -173,7 +189,7 @@
         <div class="col-lg-7">
           <p>Copyright ©2023 Journal management and Peer review system</p>
         </div>
-        <div class="col-lg-5 text-end">
+        <div class="col-lg-5 text-lg-end">
           <p>Developed By: <a href="">Nogor Solutions Limited</a></p>
         </div>
       </div>
