--- a/change-password.html
+++ b/change-password.html
@@ -24,14 +24,14 @@
   <header>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-6 col-lg-4 align-self-center">
           <div class="left_logo">
             <a href="">
               <img src="images/main_logo.png" alt="main_logo" width="200">
             </a>
           </div>
         </div>
-        <div class="col-lg-8 align-self-center">
+        <div class="col-6 col-lg-8 align-self-center">
           <div class="right_information d-flex justify-content-end align-items-center">
             <div class="notification">
               <i class="fas fa-bell"></i>
@@ -47,13 +47,25 @@
   </header>
   <!-- header part end -->
 
+  <!-- mobile menu start -->
+  <div class="mobile_menus d-block d-lg-none">
+    <div class="container">
+      <div class="mobile_menu">
+        <i class="fas fa-bars"></i> <span>Menu</span>
+      </div>
+    </div>
+  </div>
+  <!-- mobile menu end -->
+
+
   <!-- main part start -->
   <main>
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-xl-3">
           <div class="left_sidebar">
-            <div class="profile_widget">
+            <div class="profile_widget position-relative">
+              <div class="mobile_sidebar_close d-block d-lg-none"><i class="fas fa-times"></i></div>
               <div class="image">
                 <figure>
                   <img src="images/profile.jpg" alt="profile" class="img-fluid">
@@ -116,11 +128,11 @@
             <div class="dashboard_info">
               <div class="common_block">
                 <div class="d-flex justify-content-between align-items-start">
-                  <h4 class="common__title">Profile Details</h4>
+                  <h4 class="common__title">Change Password</h4>
                 </div>
                 <form action="">
                   <div class="row">
-                    <div class="col-lg-4 mb-4">
+                    <div class="col-lg-4 mb-3">
                       <div class="input__groups">
                         <label>Enter Your Password</label>
                         <div class="input__box position-relative">
@@ -131,7 +143,7 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-lg-4 mb-4">
+                    <div class="col-lg-4 mb-3">
                       <div class="input__groups">
                         <label>Enter New Password</label>
                         <div class="input__box position-relative">
@@ -140,7 +152,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-lg-4 mb-4">
+                    <div class="col-lg-4 mb-3">
                       <div class="input__groups">
                         <label>Enter Confirm Password</label>
                         <div class="input__box position-relative">
@@ -167,7 +179,7 @@
         <div class="col-lg-7">
           <p>Copyright ©2023 Journal management and Peer review system</p>
         </div>
-        <div class="col-lg-5 text-end">
+        <div class="col-lg-5 text-lg-end">
           <p>Developed By: <a href="">Nogor Solutions Limited</a></p>
         </div>
       </div>
@@ -175,6 +187,9 @@
   </footer>
   <!-- footer part end -->
 
+
+
+  
 
 
 
