--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <header>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-6 col-lg-4 align-self-center">
           <div class="left_logo">
             <a href="">
               <img src="images/main_logo.png" alt="main_logo" width="200">
             </a>
           </div>
         </div>
-        <div class="col-lg-8 align-self-center">
+        <div class="col-6 col-lg-8 align-self-center">
           <div class="right_information d-flex justify-content-end align-items-center">
             <div class="notification">
               <i class="fas fa-bell"></i>
@@ -46,13 +46,25 @@
   </header>
   <!-- header part end -->
 
+  <!-- mobile menu start -->
+  <div class="mobile_menus d-block d-lg-none">
+    <div class="container">
+      <div class="mobile_menu">
+        <i class="fas fa-bars"></i> <span>Menu</span>
+      </div>
+    </div>
+  </div>
+  <!-- mobile menu end -->
+
   <!-- main part start -->
+
   <main>
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-xl-3">
           <div class="left_sidebar">
-            <div class="profile_widget">
+            <div class="profile_widget position-relative">
+              <div class="mobile_sidebar_close d-block d-lg-none"><i class="fas fa-times"></i></div>
               <div class="image">
                 <figure>
                   <img src="images/profile.jpg" alt="profile" class="img-fluid">
@@ -114,8 +126,8 @@
           <div class="right_info">
             <div class="dashboard_info">
               <div class="top_short_info">
-                <div class="row">
-                  <div class="col-lg-4">
+                <div class="row g-4">
+                  <div class="col-sm-6 col-xl-4">
                     <div class="short_info_item">
                       <div class="media">
                         <div class="icon-wrap bg-warning"><i class="far fa-folder-open"></i></div>
@@ -126,7 +138,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-sm-6 col-xl-4">
                     <div class="short_info_item">
                       <div class="media">
                         <div class="icon-wrap bg-success"><i class="fas fa-wallet"></i></div>
@@ -137,7 +149,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-4">
+                  <div class="col-sm-6 col-xl-4">
                     <div class="short_info_item">
                       <div class="media">
                         <div class="icon-wrap bg-info"><i class="far fa-times-circle"></i></div>
@@ -150,58 +162,60 @@
                   </div>
                 </div>
               </div>
-              <div class="common_block table-responsive">
+              <div class="common_block">
                 <h4 class="common__title">Recent Submission</h4>
-                <table class="table table-bordered table-striped mb-0">
-                  <thead class="table-dark">
-                    <tr>
-                      <th>Sl</th>
-                      <th>Title</th>
-                      <th>Current Status</th>
-                      <th>Submission Date</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>01</td>
-                      <td>Now you can have the philosophy</td>
-                      <td><span class="badge bg-danger">Pending</span></td>
-                      <td>May 24, 2022</td>
-                    </tr>
-                    <tr>
-                      <td>01</td>
-                      <td>Now you can have the philosophy</td>
-                      <td><span class="badge bg-success">Complete</span></td>
-                      <td>May 24, 2022</td>
-                    </tr>
-                    <tr>
-                      <td>01</td>
-                      <td>Now you can have the philosophy</td>
-                      <td><span class="badge bg-danger">Pending</span></td>
-                      <td>May 24, 2022</td>
-                    </tr>
-                    <tr>
-                      <td>01</td>
-                      <td>Now you can have the philosophy</td>
-                      <td><span class="badge bg-success">Complete</span></td>
-                      <td>May 24, 2022</td>
-                    </tr>
-                    <tr>
-                      <td>01</td>
-                      <td>Now you can have the philosophy</td>
-                      <td><span class="badge bg-danger">Pending</span></td>
-                      <td>May 24, 2022</td>
-                    </tr>
-                    <tr>
-                      <td>01</td>
-                      <td>Now you can have the philosophy</td>
-                      <td><span class="badge bg-success">Complete</span></td>
-                      <td>May 24, 2022</td>
-                    </tr>
-                  </tbody>
-                </table>
+                <div class="table-responsive">
+                  <table class="table table-bordered table-striped mb-0">
+                    <thead class="table-dark">
+                      <tr>
+                        <th>Sl</th>
+                        <th>Title</th>
+                        <th>Current Status</th>
+                        <th>Submission Date</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td style="min-width: 40px;">01</td>
+                        <td style="min-width: 220px;">Now you can have the philosophy</td>
+                        <td style="min-width: 130px;"><span class="badge bg-danger">Pending</span></td>
+                        <td style="min-width: 160px;">May 24, 2022</td>
+                      </tr>
+                      <tr>
+                        <td>01</td>
+                        <td>Now you can have the philosophy</td>
+                        <td><span class="badge bg-success">Complete</span></td>
+                        <td>May 24, 2022</td>
+                      </tr>
+                      <tr>
+                        <td>01</td>
+                        <td>Now you can have the philosophy</td>
+                        <td><span class="badge bg-danger">Pending</span></td>
+                        <td>May 24, 2022</td>
+                      </tr>
+                      <tr>
+                        <td>01</td>
+                        <td>Now you can have the philosophy</td>
+                        <td><span class="badge bg-success">Complete</span></td>
+                        <td>May 24, 2022</td>
+                      </tr>
+                      <tr>
+                        <td>01</td>
+                        <td>Now you can have the philosophy</td>
+                        <td><span class="badge bg-danger">Pending</span></td>
+                        <td>May 24, 2022</td>
+                      </tr>
+                      <tr>
+                        <td>01</td>
+                        <td>Now you can have the philosophy</td>
+                        <td><span class="badge bg-success">Complete</span></td>
+                        <td>May 24, 2022</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
-              <div class="common_block table-responsive">
+              <div class="common_block">
                 <h4 class="common__title">Download Forms</h4>
                 <div class="row mt-2">
                   <div class="col-lg-6">
@@ -215,7 +229,7 @@
                       </ul>
                     </fieldset>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 mt-4 mt-lg-0">
                     <fieldset>
                       <h5 class="sub__header">After Acceptance:</h5>
                       <ul class="downloaded_files list-unstyled">
@@ -241,7 +255,7 @@
         <div class="col-lg-7">
           <p>Copyright ©2023 Journal management and Peer review system</p>
         </div>
-        <div class="col-lg-5 text-end">
+        <div class="col-lg-5 text-lg-end">
           <p>Developed By: <a href="">Nogor Solutions Limited</a></p>
         </div>
       </div>
