--- a/submission-view.html
+++ b/submission-view.html
@@ -24,14 +24,14 @@
   <header>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-6 col-lg-4 align-self-center">
           <div class="left_logo">
             <a href="">
               <img src="images/main_logo.png" alt="main_logo" width="200">
             </a>
           </div>
         </div>
-        <div class="col-lg-8 align-self-center">
+        <div class="col-6 col-lg-8 align-self-center">
           <div class="right_information d-flex justify-content-end align-items-center">
             <div class="notification">
               <i class="fas fa-bell"></i>
@@ -47,13 +47,25 @@
   </header>
   <!-- header part end -->
 
+  <!-- mobile menu start -->
+  <div class="mobile_menus d-block d-lg-none">
+    <div class="container">
+      <div class="mobile_menu">
+        <i class="fas fa-bars"></i> <span>Menu</span>
+      </div>
+    </div>
+  </div>
+  <!-- mobile menu end -->
+
+
   <!-- main part start -->
   <main>
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-xl-3">
           <div class="left_sidebar">
-            <div class="profile_widget">
+            <div class="profile_widget position-relative">
+              <div class="mobile_sidebar_close d-block d-lg-none"><i class="fas fa-times"></i></div>
               <div class="image">
                 <figure>
                   <img src="images/profile.jpg" alt="profile" class="img-fluid">
@@ -121,41 +133,43 @@
                   <div class="col-lg-12 mb-5">
                     <fieldset>
                       <h5 class="sub__header">Article Info</h5>
-                      <table class="table table-bordered table-striped mb-0">
-                        <tbody>
-                          <tr>
-                            <th width="200">Title</th>
-                            <th class="text-center" width="50">:</th>
-                            <td>Now you can have the philosophy</td>
-                          </tr>
-                          <tr>
-                            <th>Abstract</th>
-                            <th class="text-center" width="50">:</th>
-                            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A laborum veritatis quos
-                              asperiores voluptatibus ad esse praesentium accusamus aspernatur at.</td>
-                          </tr>
-                          <tr>
-                            <th>With Author File</th>
-                            <th class="text-center" width="50">:</th>
-                            <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
-                          </tr>
-                          <tr>
-                            <th>Without Author File</th>
-                            <th class="text-center" width="50">:</th>
-                            <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
-                          </tr>
-                          <tr>
-                            <th>Created At</th>
-                            <th class="text-center" width="50">:</th>
-                            <td></td>
-                          </tr>
-                          <tr>
-                            <th>Updated At</th>
-                            <th class="text-center" width="50">:</th>
-                            <td></td>
-                          </tr>
-                        </tbody>
-                      </table>
+                      <div class="table-responsive">
+                        <table class="table table-bordered table-striped mb-0">
+                          <tbody>
+                            <tr>
+                              <th style="min-width: 170px;" width="200">Title</th>
+                              <th style="min-width:40px" class="text-center" width="50">:</th>
+                              <td style="min-width:350px">Now you can have the philosophy</td>
+                            </tr>
+                            <tr>
+                              <th>Abstract</th>
+                              <th class="text-center" width="50">:</th>
+                              <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A laborum veritatis quos
+                                asperiores voluptatibus ad esse praesentium accusamus aspernatur at.</td>
+                            </tr>
+                            <tr>
+                              <th>With Author File</th>
+                              <th class="text-center" width="50">:</th>
+                              <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
+                            </tr>
+                            <tr>
+                              <th>Without Author File</th>
+                              <th class="text-center" width="50">:</th>
+                              <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
+                            </tr>
+                            <tr>
+                              <th>Created At</th>
+                              <th class="text-center" width="50">:</th>
+                              <td></td>
+                            </tr>
+                            <tr>
+                              <th>Updated At</th>
+                              <th class="text-center" width="50">:</th>
+                              <td></td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
                     </fieldset>
                   </div>
                   <div class="col-lg-12 mb-5">
@@ -165,7 +179,9 @@
                         <div class="row">
                           <div class="col-lg-12">
                             <span class="badge bg-success fs-6">Accepted</span>
-                            <p class="my-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil culpa, sed neque ratione laboriosam non facere nulla ullam! Magni maiores dolorum quam cupiditate placeat, ratione eveniet libero quibusdam ipsam veniam.</p>
+                            <p class="my-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil culpa, sed
+                              neque ratione laboriosam non facere nulla ullam! Magni maiores dolorum quam cupiditate
+                              placeat, ratione eveniet libero quibusdam ipsam veniam.</p>
                             <h5>Your Submission is Approved</h5>
                           </div>
                         </div>
@@ -384,7 +400,7 @@
         <div class="col-lg-7">
           <p>Copyright ©2023 Journal management and Peer review system</p>
         </div>
-        <div class="col-lg-5 text-end">
+        <div class="col-lg-5 text-lg-end">
           <p>Developed By: <a href="">Nogor Solutions Limited</a></p>
         </div>
       </div>
