--- a/submission.html
+++ b/submission.html
@@ -24,14 +24,14 @@
   <header>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-6 col-lg-4 align-self-center">
           <div class="left_logo">
             <a href="">
               <img src="images/main_logo.png" alt="main_logo" width="200">
             </a>
           </div>
         </div>
-        <div class="col-lg-8 align-self-center">
+        <div class="col-6 col-lg-8 align-self-center">
           <div class="right_information d-flex justify-content-end align-items-center">
             <div class="notification">
               <i class="fas fa-bell"></i>
@@ -47,13 +47,25 @@
   </header>
   <!-- header part end -->
 
+  <!-- mobile menu start -->
+  <div class="mobile_menus d-block d-lg-none">
+    <div class="container">
+      <div class="mobile_menu">
+        <i class="fas fa-bars"></i> <span>Menu</span>
+      </div>
+    </div>
+  </div>
+  <!-- mobile menu end -->
+
+
   <!-- main part start -->
   <main>
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-xl-3">
           <div class="left_sidebar">
-            <div class="profile_widget">
+            <div class="profile_widget position-relative">
+              <div class="mobile_sidebar_close d-block d-lg-none"><i class="fas fa-times"></i></div>
               <div class="image">
                 <figure>
                   <img src="images/profile.jpg" alt="profile" class="img-fluid">
@@ -114,44 +126,48 @@
           <div class="right_info">
             <div class="dashboard_info">
               <div class="common_block">
-                <div class="d-flex justify-content-between align-items-start">
+                <div class="d-lg-flex justify-content-between align-items-start">
                   <h4 class="common__title">Submission List</h4>
-                  <a href="paper-submission-form.html" class="common__btn__">New Paper Submission</a>
+                  <h5 class="mb-3">
+                    <a href="paper-submission-form.html" class="common__btn__">New Paper Submission</a>
+                  </h5>
                 </div>
-                <table class="table table-bordered table-striped mb-0">
-                  <thead class="table-dark">
-                    <tr>
-                      <th>Sl</th>
-                      <th>Title</th>
-                      <th>Documents</th>
-                      <th>Current Status</th>
-                      <th>Action</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>01</td>
-                      <td>Now you can have the philosophy</td>
-                      <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
-                      <td><span class="badge bg-success">Approved</span></td>
-                      <td><a href="submission-view.html" class="view__submission"><i class="fas fa-eye"></i></a></td>
-                    </tr>
-                    <tr>
-                      <td>01</td>
-                      <td>Now you can have the philosophy</td>
-                      <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
-                      <td><span class="badge bg-danger">Rejected</span></td>
-                      <td><a href="submission-view.html" class="view__submission"><i class="fas fa-eye"></i></a></td>
-                    </tr>
-                    <tr>
-                      <td>01</td>
-                      <td>Now you can have the philosophy</td>
-                      <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
-                      <td><span class="badge bg-info">Pending</span></td>
-                      <td><a href="submission-view.html" class="view__submission"><i class="fas fa-eye"></i></a></td>
-                    </tr>
-                  </tbody>
-                </table>
+                <div class="table-responsive">
+                  <table class="table table-bordered table-striped mb-0">
+                    <thead class="table-dark">
+                      <tr>
+                        <th>Sl</th>
+                        <th>Title</th>
+                        <th>Documents</th>
+                        <th>Current Status</th>
+                        <th>Action</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td style="min-width:40px">01</td>
+                        <td style="min-width:220px">Now you can have the philosophy</td>
+                        <td style="min-width: 110px;"><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
+                        <td style="min-width: 130px;"><span class="badge bg-success">Approved</span></td>
+                        <td style="min-width: 80px;"><a href="submission-view.html" class="view__submission"><i class="fas fa-eye"></i></a></td>
+                      </tr>
+                      <tr>
+                        <td>01</td>
+                        <td>Now you can have the philosophy</td>
+                        <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
+                        <td><span class="badge bg-danger">Rejected</span></td>
+                        <td><a href="submission-view.html" class="view__submission"><i class="fas fa-eye"></i></a></td>
+                      </tr>
+                      <tr>
+                        <td>01</td>
+                        <td>Now you can have the philosophy</td>
+                        <td><a href="" class="submission__file"><i class="fas fa-file-powerpoint"></i></a></td>
+                        <td><span class="badge bg-info">Pending</span></td>
+                        <td><a href="submission-view.html" class="view__submission"><i class="fas fa-eye"></i></a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
@@ -168,7 +184,7 @@
         <div class="col-lg-7">
           <p>Copyright ©2023 Journal management and Peer review system</p>
         </div>
-        <div class="col-lg-5 text-end">
+        <div class="col-lg-5 text-lg-end">
           <p>Developed By: <a href="">Nogor Solutions Limited</a></p>
         </div>
       </div>
